deps-example/target/debug/build/num-traits-1e0b3a123ea65d36/stderr
error[E0658]: use of unstable library feature 'total_cmp'
 --> <anon>:1:31
  |
1 | pub fn probe() { let _ = 1f64.total_cmp(&2f64); }
  |                               ^^^^^^^^^
  |
  = note: see issue #72599 <https://github.com/rust-lang/rust/issues/72599> for more information
  = help: add `#![feature(total_cmp)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
